# wayfire

./: meson.build
metadata/: meson.build  wm-actions.xml
plugins/common/: workspace-wall.cpp
plugins/cube/: cube.cpp
plugins/ipc/: ipc.cpp  stipc.cpp
plugins/ipc-rules/: ipc-utility-methods.hpp
plugins/protocols/: ext-toplevel.cpp  gtk-shell.cpp  input-method-v1.cpp  wayfire-shell.cpp
plugins/tile/: tile-plugin.cpp
plugins/vswitch/: vswitch.cpp
plugins/wm-actions/: wm-actions.cpp
proto/: wayfire-shell-unstable-v2.xml
src/: debug.cpp  meson.build  render.cpp
src/api/wayfire/: core.hpp  output.hpp  plugin.hpp  render.hpp  scene-input.hpp  scene-render.hpp  scene.hpp  signal-definitions.hpp  (+2 more)
src/core/: core.cpp  output-layout-priv.hpp  output-layout.cpp  scene.cpp
src/output/: output.cpp  render-manager.cpp  workspace-impl.cpp
src/view/: view-3d.cpp  view-keyboard-interaction.cpp  view-node.cpp  view.cpp  wlr-surface-node.cpp  wlr-surface-pointer-interaction.hpp  wlr-surface-touch-interaction.cpp  xdg-shell.cpp  xdg-shell.hpp
test/: meson.build
test/geometry/: meson.build  output-layout-helpers-test.cpp  region_test.cpp
test/misc/: meson.build  object-signal-test.cpp
test/protocol/: layer-shell-test.cpp  meson.build  xdg-shell-test.cpp
test/support/: headless-core-harness.cpp  headless-core-harness.hpp  wayland-client-utils.cpp  wayland-client-utils.hpp  wayland-layer-shell-client-bridge.c  wayland-layer-shell-client-bridge.h  wayland-layer-shell-client.cpp  wayland-layer-shell-client.hpp  wayland-xdg-client.cpp  wayland-xdg-client.hpp
(+13 files in other folders)
