geometry_test = executable(
    'geometry_test',
    'geometry_test.cpp',
    dependencies: libwayfire,
    install: false)
test('Geometry test', geometry_test)

region_test = executable(
    'region_test',
    'region_test.cpp',
    dependencies: libwayfire,
    install: false)
test('Region test', region_test)

output_layout_helpers_test = executable(
    'output_layout_helpers_test',
    'output-layout-helpers-test.cpp',
    dependencies: libwayfire,
    install: false)
test('Output layout helpers test', output_layout_helpers_test)
